--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "axios": "^1.6.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "focus-trap-react": "^10.2.3",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-portal": "^4.2.2",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "sass": "^1.68.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
